<resources>
    <string name="app_name">Phishing emails detector</string>
    <!-- Strings used in UI -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="login_fragment_label">Phishing emails detector</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sign_in_to_your_email_account">Please, sign in to your Gmail account:</string>
    <string name="sender">Sender: </string>
    <string name="subject">Subject</string>
    <string name="sender_details_minimal">Sender: %1$s</string>
    <string name="subject_details_minimal">Subject: %1$s</string>
    <string name="body_details_minimal">Body:\n%1$s</string>
    <string name="timestamp_details_minimal">Timestamp: %1$s</string>
    <string name="phishing_status_details_minimal">Phishing Status: %1$s</string>
    <string name="import_emails_from_gmail">Import emails from Gmail</string>
    <string name="save_selected_emails">Save</string>
    <string name="login_web_client_id">101829037621-eqahc6elokfbjf56epf1tl2eph2ngr65.apps.googleusercontent.com</string>
    <string name="phishing_info_text">Scammers use email or text messages to trick you into giving them your personal and financial information. But there are several ways to protect yourself!</string>
    <string name="phishing_info_link"><a href="https://consumer.ftc.gov/articles/how-recognize-and-avoid-phishing-scams">How to Recognize and Avoid Phishing Scams</a></string>
    <string name="title_emails">My Emails</string>
    <string name="title_training">Training your models</string>
    <string name="title_detector">Phishing detector</string>
    <string name="title_learn">Learn about phishing</string>
    <string name="title_moremenu">More</string>
    <string name="title_settings">Settings</string>
    <string name="submit">Save</string>
    <string name="title_emails_saved">Saved E-mails</string>
    <string name="title_emails_import">Import E-mails</string>
    <string name="title_emails_detector">Detected E-mails</string>
    <string name="timestamp">time</string>
    <string name="goto_saved_emails_label">Import more e-mails</string>
    <string name="empty_saved_label">Nothing here</string>
    <string name="title_tablayout">Tab layout</string>
    <string name="title_appbarlayout">App bar layout</string>
    <string name="take_a_phishing_quiz">Take a Phishing quiz</string>
    <string name="learn_more_about_phishing_for_settings">Learn more about phishing</string>
    <string name="learn_more_about_phishing">Learn more about phishing:</string>
    <string name="learn_more_about_phishing_prevention">Learn more about phishing prevention</string>
    <string name="snippet">snippet\n</string>
    <string name="attachments">attachments</string>
    <string name="internal_date">"Internal Date: "</string>
    <string name="history_id">"History ID: "</string>
    <string name="snippet_label">"Snippet: "</string>
    <string name="label_ids">"Label IDs: "</string>
    <string name="thread_id">"Thread ID: "</string>
    <string name="id">"ID: "</string>
    <string name="part_id">"Part ID: "</string>
    <string name="mime_type">"Mime Type: "</string>
    <string name="filename">"Filename: "</string>
    <string name="parts">PARTS:</string>
    <string name="body">BODY:</string>
    <string name="headers">HEADERS:</string>
    <string name="value">"Value: "</string>
    <string name="size">"Size: "</string>
    <string name="part_body">"Part body: "</string>
    <string name="part_headers">Part headers:</string>
    <string name="payload">PAYLOAD:</string>
    <string name="details">Details</string>
    <string name="sender_label">"From: "</string>
    <string name="sender_value">value</string>
    <string name="attachments_label">"Number of parts: "</string>
    <string name="result_string">result</string>
    <string name="detect_phishing">Detect phishing</string>
    <string name="classification_result">Classification Result:</string>
    <string name="body_string">Body:</string>
    <string name="select_email">Select email</string>
    <string name="submit_button_string_fab">submit fab</string>
    <string name="left_arrow_indicator_non_clickable">Left arrow indicator, non-clickable</string>
    <string name="ended_range_selection">"Ended range selection "</string>
    <string name="started_range_selection">"Started range selection "</string>
    <string name="data_picking_fragment">Data Picking Fragment</string>
    <string name="data_processing_fragment">Data Processing Fragment</string>
    <string name="retraining_fragment">Retraining fragment</string>
    <string name="training_fragment">Training Fragment</string>
    <string name="delete_email_package">delete email package</string>
    <string name="refresh">Refresh</string>
    <string name="add_new_package">Add new package</string>
    <string name="loading">Extracting features</string>
    <string name="additional_text">Extract features from your selected email packages:</string>
    <string name="title_model_manager">Manager your models</string>
    <string name="one_pishing_one_safe">Pick one phishing, one safe processed emails package you would like to train the model with:</string>
    <string name="one_pishing_one_safe_one_model">Pick one phishing, one safe processed emails package and model you would like to retrain on new data:</string>
    <string name="select_email_packages_to_for_processing_or_skip_to_training_with_processed_packages">Email packages to process:</string>
    <string name="select_from_your_models">Select from your models</string>
    <string name="phishing_warning">Phishing</string>
    <string name="safe_email">Safe</string>
    <string name="model_manager_title">Model Manager</string>
    <string name="batch_import_description">Batch import emails</string>
    <string name="batch_import_string">Batch Import E-mails</string>
    <string name="load_from_server">Load from Server</string>
    <string name="extract_send_weights">Extract and Send Weights</string>
    <string name="delete">Delete</string>
    <string name="package_all">Package all</string>
    <string name="select_from_your_models_spinner">Select from your models:</string>
    <string name="phishing_label_2">Phishing label</string>
    <string name="confirm_big">CONFIRM</string>
    <string name="cancel_big">CANCEL</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="file_selection_cancelled">File selection cancelled.</string>
    <string name="file_processing_initiated">File processing initiated.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="phish">Phish</string>
    <string name="emails_successfully_packaged">Packaging sucessfull!</string>
    <string name="enter_package_name">Enter package name</string>
    <string name="package_config">Package config</string>
    <string name="evaluation_matrix">Evaluation matrix:</string>
    <string name="f1_score">F1 Score:</string>
    <string name="recall">Recall:</string>
    <string name="precision">Precision:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="evaluation_results">Model evaluation</string>
    <string name="evaluate_model">Evaluate model</string>
    <string name="process_emails">Process Emails</string>
    <string name="rocAuc">ROC AUC:</string>
    <string name="actual_predicted">Actual predicted</string>
    <string name="positive">positive</string>
    <string name="negative">Negative</string>
    <string name="actual_negative">Actual Negative</string>
    <string name="actual_legitimate">Actual Safe</string>
    <string name="predicted_legitimate">Predicted Safe</string>
    <string name="predicted_phishing">Predicted Phishing</string>
    <string name="actual_phishing">Actual Phishing</string>
</resources>