<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Emails Fragment -->
    <item
        android:id="@+id/EmailsParentFragment"
        android:icon="@drawable/ic_mails_selector"
        android:title="@string/title_emails" />

    <!-- Training Fragment -->
    <item
        android:id="@+id/TrainingFragment"
        android:icon="@drawable/ic_training"
        android:title="@string/title_training" />

    <!-- Detector Fragment -->
    <item
        android:id="@+id/DetectorFragment"
        android:icon="@drawable/ic_detector_selector"
        android:title="@string/title_detector" />

    <!-- Model Manager Fragment -->
    <item
        android:id="@+id/ModelManagerFragment"
        android:icon="@drawable/ic_cube_icon"
        android:title="@string/title_learn" />

    <!-- Expanded menu Fragment -->
    <item
        android:id="@+id/SettingsFragment"
        android:icon="@drawable/ic_menu"
        android:title="@string/title_moremenu" />
</menu>