<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/partId_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/part_id"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/partId_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mimeType_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mime_type"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mimeType_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filename_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filename"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/filename_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/divider_3"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/headers_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headers"
        android:textColor="@color/md_theme_dark_primary"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/headersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/divider_3"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/body_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body"
        android:textColor="@color/md_theme_dark_primary"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bodiesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/divider_3"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/parts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parts"
        android:textColor="@color/md_theme_dark_primary"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/divider_2"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/partsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
